# ChangeLog for dev-db/mysql
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-db/cvs-repo/gentoo-x86/dev-db/mysql/ChangeLog,v 1.582 2011/07/14 03:55:11 jmbsvicetto Exp $

*mysql-5.5.14 (14 Jul 2011)

  14 Jul 2011; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  +mysql-5.5.14.ebuild:
  [dev-db/mysql] Adding mysql-5.5.14 from the overlay.

  13 Jul 2011; Robin H. Johnson <robbat2@gentoo.org> -mysql-5.0.70-r1.ebuild,
  -mysql-5.0.72.ebuild, -mysql-5.0.72-r1.ebuild, -mysql-5.0.76.ebuild,
  -mysql-5.0.76-r1.ebuild, -mysql-5.0.83.ebuild, -mysql-5.0.84.ebuild,
  -mysql-5.0.84-r1.ebuild, -mysql-5.0.87.ebuild, -mysql-5.0.88.ebuild,
  -mysql-5.0.90.ebuild, -mysql-5.0.90-r1.ebuild, -mysql-5.0.90-r2.ebuild,
  -mysql-5.1.39-r1.ebuild, -mysql-5.1.44.ebuild, -mysql-5.1.44-r1.ebuild,
  -mysql-5.1.44-r2.ebuild, -mysql-5.1.44-r3.ebuild, -mysql-5.1.45.ebuild,
  -mysql-5.1.45-r1.ebuild, -mysql-5.1.46.ebuild, -mysql-5.1.49.ebuild,
  -mysql-5.1.49-r1.ebuild, -mysql-5.1.50.ebuild, -mysql-5.1.50-r1.ebuild:
  Trim lots of old versions that are superseded by newer stable.

*mysql-5.0.92 (13 Jul 2011)

  13 Jul 2011; Robin H. Johnson <robbat2@gentoo.org> +mysql-5.0.92.ebuild:
  Security version bump for users unable to upgrade to 5.1 series. Will not be
  stabilized as not all vulerabilities are fixable in 5.0 series. Users should
  migrate to 5.1 series for full security coverage.

*mysql-5.1.58 (13 Jul 2011)
*mysql-5.1.57 (13 Jul 2011)
*mysql-5.1.56-r1 (13 Jul 2011)

  13 Jul 2011; Robin H. Johnson <robbat2@gentoo.org> +mysql-5.1.56-r1.ebuild,
  +mysql-5.1.57.ebuild, +mysql-5.1.58.ebuild:
  Version bump of MySQL. Many thanks to Jorge Manuel B. S. Vicetto
  <jmbsvicetto@gentoo.org> for all the effort on the mysql-v2 eclass.

  08 Jul 2011; Samuli Suominen <ssuominen@gentoo.org> mysql-4.1.22-r1.ebuild:
  Convert from "hasq" to "has".

  14 May 2011; Raúl Porcel <armin76@gentoo.org> mysql-5.1.56.ebuild: