@@ -18,14 +18,11 @@ DIST mysql-5.1.53.tar.gz 23871815 RMD160 e8fd69450dda85cf3f41269e6e3fca05caccc76
 DIST mysql-5.1.56.tar.gz 24795624 RMD160 c2ff6eb06d0797d4b56630b783d4ad2d1add1422 SHA1 8665c76ab4ab36e8d2379ddf6d678c89b95d9321 SHA256 930e731c8f9318aa3f5e2e6985f6776aaaec81cd32df310e79e73d87177f6613
 DIST mysql-5.1.57.tar.gz 23660514 RMD160 9ca7f79d14525fef2c1badf8410fecd238ee283e SHA1 fcfe037ee6cfd53fe336ef12854e79481bdc6681 SHA256 7944fa56476f44173af4c91ad685a9da5e9d5fa9dea69dafb4b9919df3f3667d
 DIST mysql-5.1.58.tar.gz 24333490 RMD160 199729c701c764cd22584c2b952230c07d0f31a6 SHA1 cfd70bee07ad99576eecde01785b7b2a74ec87ab SHA256 3c69562399655fc62d1424437e6ef59ef7c1ed225f940f81558f549b803f3fd7
-DIST mysql-5.4.3-beta.tar.gz 21750728 RMD160 dc191579cc429441da7d20a1f50b25754fe37ad0 SHA1 daf96fb8adcdad23afed921727fe767ff0939711 SHA256 525e84f4c1fa135a492ead6945e03d91d5e72dc31397ca2d713b3124bbc3fcb5
-DIST mysql-5.5.1-m2.tar.gz 21459964 RMD160 aa36e78efe6fdbfc020cd1599fa63dd9aa60e91b SHA1 6eb787a884523ea30b4a8b900a928a0caa159e3a SHA256 26e8d98ae2341b8ee292bc173531560011e0150da63f2d873fad191d8dbce081
 DIST mysql-5.5.14.tar.gz 23772997 RMD160 1c84fc3967691e9eedd1b90df780a9d738a709c4 SHA1 3b17e20be4e8bcc0f94392fb444f4a09f80de2e4 SHA256 c7acab9ccb1e2598d079fe8b832281343c00b5b8032fcece37ef551b61980738
 DIST mysql-extras-20061210.tar.bz2 51115 RMD160 52355e608d5048c91b7960aa5be0c030ecb0e5d8 SHA1 c9d035ac73d29fe2d1274760ca70b8c6b882fec6 SHA256 46505a8b54ae7cafdc610465edfdfde1cd74f101071f71cf1f5c1c02e92790eb
 DIST mysql-extras-20070105.tar.bz2 50005 RMD160 abf1f8ebab8ecdfdb5ebe9ca55076f39ab492acb SHA1 7f4dbc3d6c20fe953bf6e936a58343a229398ca0 SHA256 17697bf70acffd0eeefd976b5ef06dd36080273bf7e805b51a31d72f5f2c5172
 DIST mysql-extras-20080124.tar.bz2 106526 RMD160 8f9f556308c96c4cd5cffd0506c99ea59e7c25c2 SHA1 574f5dbf4a8bb53d352cb2fbe391ad5c484eb932 SHA256 c4b33dd391834252d20d4b083ac4bd6999253a8f20d894dd93b0795c6b318829
 DIST mysql-extras-20090228-2228Z.tar.bz2 254048 RMD160 d71ed448d9fbe61ecc9e4113bd0a7721e8321acb SHA1 9fd9370193e7038067e11cc8a26bfe4013eb6bac SHA256 03a986a5c5ae57f1436553565239613e978ae11e12834fcb275ec6457b12b6fb
-DIST mysql-extras-20100201-0104Z.tar.bz2 933785 RMD160 7780fcc370d2eb8e48993aaeba480e2ec7785c14 SHA1 ce098829243327c5941a9864a9e0632ae5cee418 SHA256 d06f7d2e6920576392adf0fa544931aa6dcecf45060dac4968ea8d88e84c2f70
 DIST mysql-extras-20100809-0452Z.tar.bz2 1228458 RMD160 baedaa994165ec17cfc31357d91212c8350be310 SHA1 e464adc36d96b76a5c6ac74856060d05ff0bba3d SHA256 2ba39a87dd5ea2c819193d1b25c6e2abbd4506d63c1e8b845846b7b33d64e52b
 DIST mysql-extras-20101006-0004Z.tar.bz2 1251792 RMD160 ee333704688e4e9f07f5e7fb68961d3ffaff0755 SHA1 c1633295abb7f3d2ff463938f85e1bc8ed708b4f SHA256 a42c4988a25113bef5cc727fb24c994502f4d02469246ff839f8ea2a08c07bb7
 DIST mysql-extras-20101104-1842Z.tar.bz2 1255196 RMD160 712cc8d8c4f84dc5419e0c69cee1ebd5e14c11d9 SHA1 9080b25248bc7a17b51b049c35d87a220db4dca2 SHA256 64a1f9c29b955eec52f3b45b2cd50bbcc286982290c36c5eb87fe9b160be6cc2
@@ -48,25 +45,23 @@ EBUILD mysql-5.1.56-r1.ebuild 8668 RMD160 634a23c158b9a4a0edab5cb3de1f0b0bf86cb7
 EBUILD mysql-5.1.56.ebuild 8659 RMD160 afec6db5737ec2049241488e593cd681d42ca493 SHA1 b85f9e79befbf722e5d017b15c342ecc746744fa SHA256 badf220bea95fe69591b5fff807eeb9cdb49f4d0009567a609aa900cbbf49b6a
 EBUILD mysql-5.1.57.ebuild 8715 RMD160 f086ab37e0230cc1187d06073a261664b4b5e38e SHA1 558b14a34400841bec569aeab1492331f2994382 SHA256 4307074e0ae888e350f0496dd874a6e7c370caf8308ab596b6bbb772cd4533d0
 EBUILD mysql-5.1.58.ebuild 8715 RMD160 4305acc12217685c7f32066067b216215cc96772 SHA1 41bfa19a00638c3ec92ebbb893be1a2423da764a SHA256 f357e63db8d923b463e4de55272d63afbf49f611830461122f24162cf61c1790
-EBUILD mysql-5.4.3_beta.ebuild 6675 RMD160 d8684e092a0200a3583c669a73471b9fcb6fe4f6 SHA1 e2829c54379498f5b0b4b2272fac599f87fd1f1f SHA256 9d62a845db7bb3752f78f2814858c7ab4f3efc70fa9a1e16f935b5a4dee8face
-EBUILD mysql-5.5.14.ebuild 3906 RMD160 6eeae57eac2f61e9dda0898bd7a98e262317d907 SHA1 73a189397c9f2e33f8e40454467e64c405083d22 SHA256 a3d8957b45ea1d2b5e3ee5f4fd569f06dce304b6e10c44c6e41bd5b1e4b01c95
-EBUILD mysql-5.5.1_alpha_pre2.ebuild 6903 RMD160 dd85e75069e59ae77f5fccdd9fff994aaeb06899 SHA1 8a0f91a49b63681f428beb589512924d347cc643 SHA256 25cf50e56a99318309cd9f51d86695018d957dec53e7ef5eda7e9d2a3233d086
-MISC ChangeLog 111800 RMD160 5eac859ae9c180d23a3feea7c1a47a63aace841c SHA1 a32b405c6406a27501daf65967872e4f218f7502 SHA256 b33f3a219f886c1bc518327704d8d3fcba6b40d59a9dee94833ae0a4c9a9d474
+EBUILD mysql-5.5.14.ebuild 3916 RMD160 c477eb7200fa7444aaaaa48699477a858d3de95f SHA1 32aeee60204ab8ed9b436144d88fc5f4da847ea2 SHA256 5382baf2d872a1251cf052744c473708026145ea43c4e5f5de8273cb726ae491
+MISC ChangeLog 112036 RMD160 f38697295a82d4a50f23911c888101331eb232f1 SHA1 e0d0332fa6d6137089cfa76e413ebbefa671e2e5 SHA256 756971ed7731d2a15675569ab05285a106bbed7109d7b0f010427ad32b6b6b68
 MISC metadata.xml 1389 RMD160 711fe2927a95bff06abbba5209a1e03fd99ba7b5 SHA1 adaf717edeadad3ebe8e7b486d75477b2ec5433b SHA256 562726facccb1c1808b74c0e17f052ca03c92c0ada689375e527b2a5405a5a0a
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iQIcBAEBCgAGBQJOHmg8AAoJEC8ZTXQF1qEPAQEP/jwqdiNgv6j1LUuWrJ/zY1uI
-8LDJC7TsHzyyY/RIKwkeEsBpmADdVxjKYZbIcbQ5+H+ns00gytFPm5UI6rXnKpgj
-X/ApGbPC2TFyn2vv2EvuKSII38ibeFacfoJ8lpATrOoO2bAWYuPGJLHDKMBnax/6
-UF+38vdz/zr+Bj/DT7JDyUOkvvsZ+i107M4H7wRZCKHfJ9i8vQJbvvhXv/kyCjiz
-NX3/7rg+LuF27fiWzuvZW1k91T9wdXxPCxom79K6FoA6xAfwS8Ag0TstHxX6mwbA
-6gFusgQ0fBdH2JvC58w5Qx7EXuwUak4oH94KuRTT2dnmCuHVlLtmzuv5koMUHj27
-DtoG8gkI8RbEyYkXUrn8kV/t3DPCU6pJEbuk6B9iPgvPV/znXHkzUqpmWNvC8/UV
-MGvzgwMc1ugbBQb+dhRYpVLHGvfitIZjn71OXvpQ5ZvMRhcC1/jbSDKpCUkKTS+0
-Y1yKs/SUTdZVQ+6I8rlAnqtoF+3ppob3SmTDwr7K0TCwWU7LsI5c6FlHLkEwdmHT
-B5EDNlmS3IZjd/yv7uTalTOARs5eEwsGX+BoMsvarJg/8HpCjYgpt3ewONHlx4Wc
-zINDdNPf3Za8WS9pIyIqNKITamEI4zH08GdMDEsJIuEBkef6icYE/KnN15Z9X3Sq
-B90bkU3ReTSJ21MEc8Rc
-=FCFN
+iQIcBAEBCgAGBQJOHmkQAAoJEC8ZTXQF1qEPSlIP/356pdM0uCbyt26VucsUnapD
+8zlvvOOU0g1v+X0f7qFiQ1EVL3u/PIZQGfC5w57+1VFJ47c4+xVfmVz8wL0jWl6J
+3z2tP3Oo+0mZHXA0cd7cA6ccolBGpUsmFTTHbz/sqqhU0bnh3vVWcpjqZyu6IEDe
+vN0aT8SaOEz74bLAannIelGtd7NB81aUywKSpoEjtjMjjZ1YPtGXPgqLwy1ndNm4
+DpVk0LryjT+IbJl19vzosNAn70LNzyBGdserAw2JwgNloDbkSz2KREISG6vglICq
+gw8CwrPD6vfc5mX190noQwE8LJWSlI4y+oJo/t2h38LDZfiWtt79F/Pb5z5drliC
+p80bjp+fU2VFELdJLvomu3Y8LF8lzdoMXpRWkRfa9K8HvIuCQpcZpcuW7Gb0q1mc
+UYg69etebW1gq4aDrGUB4w9sTlbAAV/EXhydYegxnyJMNk2l4NNYIUQgk0EDCDpP
+exJlkFzATZp3eDc2sAuW7St+ttUjqyzvCykId4APMcM0HG9oh3KoVsdlUqP2oNl6
+xNJL1Fb1zTIBvY91HCW0LB4U5vPgWe3BsNGZ1BOoUg1TeRwdnRIxbTKeDhs26sfM
+WBydJ3Psq3vu3Wh/i7Z0/ZbrWGJMgetso9I4uxZt7fu/ZH5cXRCi6OeGv9DaI2p+
+rmGIdUKxcfeahMOm3KB0
+=rKPT
 -----END PGP SIGNATURE-----
