@@ -1,10 +1,10 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-db/cvs-repo/gentoo-x86/dev-db/mysql/Attic/mysql-5.5.14.ebuild,v 1.1 2011/07/14 03:55:11 jmbsvicetto Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-db/cvs-repo/gentoo-x86/dev-db/mysql/Attic/mysql-5.5.14.ebuild,v 1.2 2011/07/14 03:58:44 jmbsvicetto Exp $
 
 EAPI="2"
 
-MY_EXTRAS_VER="live"
+MY_EXTRAS_VER="20110713-0702Z"
 MY_PV="${PV//_alpha_pre/-m}"
 MY_PV="${MY_PV//_/-}"
 
